@@ -1,0 +1,79 @@
+/* -*- Mode: C; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*-
+ *
+ * Copyright (C) 2019 Tianjin KYLIN Information Technology Co., Ltd.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
+ *
+ */
+#include <QCoreApplication>
+#include <QFile>
+#include <QMutex>
+#include <QDateTime>
+#include <QTextStream>
+
+#include "emdaemon.h"
+
+
+void outputMessage(QtMsgType type, const QMessageLogContext &context, const QString &msg){
+    //加锁
+    static QMutex mutex;
+    mutex.lock();
+
+    QByteArray localMsg = msg.toLocal8Bit();
+
+    QString strMsg("");
+    switch (type) {
+    case QtDebugMsg:
+        strMsg = QString("Debug:");
+        break;
+    case QtWarningMsg:
+        strMsg = QString("Warning:");
+        break;
+    case QtCriticalMsg:
+        strMsg = QString("Critical:");
+        break;
+    case QtFatalMsg:
+        strMsg = QString("Fatal:");
+        break;
+    }
+
+    //设置输出信息格式
+    QString strDateTime = QDateTime::currentDateTime().toString("M d hh:mm:ss");
+    QString strMessage = QString("%1\t%2 %3").arg(strDateTime).arg(strMsg).arg(localMsg.constData());
+
+    //输出信息至文件中
+    QFile file("/tmp/emdaemon.log");
+    file.open(QIODevice::ReadWrite | QIODevice::Append);
+    QTextStream stream(&file);
+    stream << strMessage << "\r\n";
+    file.flush();
+    file.close();
+
+    //解锁
+    mutex.unlock();
+
+}
+
+int main(int argc, char *argv[])
+{
+    QCoreApplication a(argc, argv);
+
+//    qInstallMessageHandler(outputMessage);
+
+    EMDaemon daemon;
+//    daemon.begin();
+
+    return a.exec();
+}
