@@ -1,7 +1,10 @@
 #!/bin/sh
 
-set -e
+#set -e
 
 #DEBHELPER#
+
+
+systemctl enable kylin-display-switch.service
 
 exit 0
