@@ -7,7 +7,8 @@ SUBDIRS =  \
           daemon \
           kds \
           mkt \
-    registerdbus
+    registerdbus \
+    daemon2
 
 TRANSLATIONS +=  \
                 shared/i18n/zh_CN.ts \
